<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/tv_weekday"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bt_mon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Monday"
        android:text="@string/monday"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_tue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Tuesday"
        android:text="@string/tuesday"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_wed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Wednesday"
        android:text="@string/wednesday"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_thu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Thursday"
        android:text="@string/thursday"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_fri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Friday"
        android:text="@string/friday"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_sat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Saturday"
        android:text="@string/saturday"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

</LinearLayout>